crates/telemetry-adapters/tests/snapshots/snapshots_forza__forza_fh4_edge_case_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_forza.rs
expression: normalized
---
speed_ms: 78.1
steering_angle: -1
throttle: 0
brake: 1
clutch: 1
rpm: 9000
max_rpm: 9000
gear: -1
num_gears: 0
lateral_g: 2.5492904
longitudinal_g: -1.5295743
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0.35
slip_angle_fr: 0.4
slip_angle_rl: 0.5
slip_angle_rr: 0.55
tire_temps_c:
  - 204
  - 210
  - 193
  - 215
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 1
lap: 20
current_lap_time_s: 12.3
best_lap_time_s: 58.2
last_lap_time_s: 59.8
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.01
engine_temp_c: 0
extended:
  boost_psi:
    type: Float
    value: 0
  power_w:
    type: Float
    value: 0
  suspension_travel_fl:
    type: Float
    value: 0.2
  suspension_travel_fr:
    type: Float
    value: 0.18
  suspension_travel_rl:
    type: Float
    value: 0.22
  suspension_travel_rr:
    type: Float
    value: 0.25
  tire_slip_ratio_fl:
    type: Float
    value: 0
  tire_slip_ratio_fr:
    type: Float
    value: 0
  tire_slip_ratio_rl:
    type: Float
    value: 0
  tire_slip_ratio_rr:
    type: Float
    value: 0
  torque_nm:
    type: Float
    value: 0
  wheel_speed_fl:
    type: Float
    value: 120
  wheel_speed_fr:
    type: Float
    value: 118
  wheel_speed_rl:
    type: Float
    value: 125
  wheel_speed_rr:
    type: Float
    value: 130
sequence: 0
