crates/telemetry-adapters/tests/snapshots/snapshots_forza__forza_normal_race_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_forza.rs
expression: normalized
---
speed_ms: 48.5
steering_angle: 0.11811024
throttle: 0.69803923
brake: 0.09803922
clutch: 0
rpm: 6800
max_rpm: 8500
gear: 4
num_gears: 0
lateral_g: 0.81577295
longitudinal_g: 0.30591485
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0.03
slip_angle_fr: 0.04
slip_angle_rl: 0.02
slip_angle_rr: 0.025
tire_temps_c:
  - 90
  - 93
  - 85
  - 87
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 5
lap: 3
current_lap_time_s: 42.7
best_lap_time_s: 95.4
last_lap_time_s: 96.1
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.48
engine_temp_c: 0
extended:
  boost_psi:
    type: Float
    value: 0
  power_w:
    type: Float
    value: 0
  suspension_travel_fl:
    type: Float
    value: 0.08
  suspension_travel_fr:
    type: Float
    value: 0.07
  suspension_travel_rl:
    type: Float
    value: 0.09
  suspension_travel_rr:
    type: Float
    value: 0.085
  tire_slip_ratio_fl:
    type: Float
    value: 0
  tire_slip_ratio_fr:
    type: Float
    value: 0
  tire_slip_ratio_rl:
    type: Float
    value: 0
  tire_slip_ratio_rr:
    type: Float
    value: 0
  torque_nm:
    type: Float
    value: 0
  wheel_speed_fl:
    type: Float
    value: 65
  wheel_speed_fr:
    type: Float
    value: 66
  wheel_speed_rl:
    type: Float
    value: 64
  wheel_speed_rr:
    type: Float
    value: 64.5
sequence: 0
